# 2decomp-fft

./: Makefile
examples/fft_physical_x/: fft_physical_x.f90
examples/fft_physical_z/: fft_physical_z.f90
examples/halo_test/: exchange_test.f90  halo_test.f90
examples/io_test/: io_bench.f90  io_plane_test.f90  io_read.f90  io_test.f90  io_var_test.f90
examples/test2d/: test2d.f90
src/: CMakeLists.txt  d2d_log.f90  decomp2d_kinds.f90  decomp_2d.f90  decomp_2d_kinds.f90  decomp_2d_types.f90  fft_common.f90  fft_cufft.f90  fft_fftw3.f90  fft_fftw3_f03.f90  fft_generic.f90  fft_mkl.f90  glassman.f90  halo.f90  io.f90
src/fft/: CMakeLists.txt  fft.f90  fft_common_3d.f90  fft_generic.f90  fft_log.f90
